[gd_scene load_steps=2 format=3 uid="uid://b6ev2l6eqac40"]

[ext_resource type="Script" path="res://character_menu/shapekey_slider.gd" id="1_mr07m"]

[node name="Shapekey_Slider" type="VBoxContainer"]
offset_right = 72.0
offset_bottom = 51.0
script = ExtResource("1_mr07m")

[node name="Label_Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Label_Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Value_Edit" type="LineEdit" parent="Label_Container"]
layout_mode = 2
size_flags_horizontal = 8
text = "0"
alignment = 1

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2

[connection signal="text_submitted" from="Label_Container/Value_Edit" to="." method="value_edit_text_submitted"]
[connection signal="drag_ended" from="Slider" to="." method="slider_drag_ended"]
[connection signal="value_changed" from="Slider" to="." method="slider_value_changed"]
